# project-argos

./: .gitignore  LICENSE  README.md  app.py  cli.py  config.yaml  pyproject.toml  requirements.txt
argos/: config.py  pipeline.py
argos/alerts/: notifier.py
argos/features/: engineer.py
argos/ingestion/: csv_loader.py  pdf_loader.py  validate.py
argos/models/: ensemble.py  supervised.py  unsupervised.py
argos/reporting/: report_generator.py
argos/reporting/templates/: report.html
dashboard/: argos_dash.py
models/: supervised_model.pkl.bak
scripts/: generate_sample_data.py  train_supervised.py
tests/: test_ensemble.py  test_features.py  test_ingestion.py
