[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-argos"
version = "0.2.0"
description = "Modular ML-based fraud & anomaly detector for bank statements"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["argos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
